# fold-debounce

./: .gitignore  .travis.yml  ChangeLog.md  README.md  cabal.project  fold-debounce.cabal  stack.yaml
.github/workflows/: haskell.yml
conduit/: Main.hs
eg/: synopsis.hs
fold-debounce-conduit/: ChangeLog.md  README.md  fold-debounce-conduit.cabal
fold-debounce-conduit/src/Data/Conduit/: Debounce.hs  FoldDebounce.hs
fold-debounce-conduit/test/Data/Conduit/: DebounceSpec.hs  FoldDebounceSpec.hs
freezes/: 20221124-ghc-9.2.5.freeze  20240913-ghc-9.6.1.freeze
src/Control/: FoldDebounce.hs
test/Control/: FoldDebounceSpec.hs
