name:                   fold-debounce
version:                0.2.0.16
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Fold multiple events that happen in a given period of time.
description:            Fold multiple events that happen in a given period of time. See "Control.FoldDebounce".
category:               Control
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md
extra-doc-files:        ChangeLog.md
homepage:               https://github.com/debug-ito/fold-debounce
bug-reports:            https://github.com/debug-ito/fold-debounce/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  exposed-modules:      Control.FoldDebounce
  default-extensions:   DeriveDataTypeable
  -- other-modules:
  build-depends:        base,
                        data-default ^>=0.7.1 || ^>=0.8.0,
                        stm ^>=2.5.0,
                        time,
                        stm-delay ^>=0.1.1

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  other-modules:        Control.FoldDebounceSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base,
                        fold-debounce,
                        hspec ^>=2.10.6 || ^>=2.11.9,
                        stm ^>=2.5.0,
                        time ^>=1.9.3 || ^>=1.11.1 || ^>=1.12.2 || ^>=1.14

test-suite spec-threaded
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -threaded -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  other-modules:        Control.FoldDebounceSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base,
                        fold-debounce,
                        hspec ^>=2.10.6 || ^>=2.11.9,
                        stm ^>=2.5.0,
                        time

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/fold-debounce.git
