name:                   fold-debounce-conduit
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Data.Conduit.Debounce
  -- other-modules:
  build-depends:        base >= 4 && < 5

-- executable fold-debounce-conduit
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base, fold-debounce-conduit,
                        hspec

source-repository head
  type:                 git
--  location:             
