name:                   fold-debounce-conduit
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Debounce conduit Source with Control.FoldDebounce
description:            Debounce conduit Source with Control.FoldDebounce. See "Data.Conduit.FoldDebounce"
category:               Conduit
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/fold-debounce
bug-reports:            https://github.com/debug-ito/fold-debounce/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Data.Conduit.FoldDebounce
  -- other-modules:
  build-depends:        base >= 4 && < 5

-- executable fold-debounce-conduit
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base, fold-debounce-conduit,
                        hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/fold-debounce.git
